--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -5,14 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skate Park</title>
-  <!-- Hojas de estilo de Bootstrap 5 y Personal -->
-  <link rel="stylesheet" href="/bscss" />
+  <!-- Hojas de estilo de Bootstrap 5 y de Cliente -->
+  <link rel="stylesheet" href="/bscss/bootstrap.min.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
   {{> header title = "Datos del perfil"}}
   {{> form }}
+
+  <!-- Scripts de Bootstrap, JQuery, Axios y Cliente -->
+  <script src="/bsjs"></script>
+  <script src="/jq"></script>
+  <script src="/axios"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
