--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skate Park</title>
-  <!-- Hojas de estilo de Bootstrap 5 y Personal -->
-  <link rel="stylesheet" href="/bscss" />
+  <!-- Hojas de estilo de Bootstrap 5 y de Cliente -->
+  <link rel="stylesheet" href="/bscss/bootstrap.min.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -29,6 +29,12 @@
     </form>
   </div>
   <p>¿Aún no tienes cuenta? <a href="/register">Regístrate</a></p>
+
+  <!-- Scripts de Bootstrap, JQuery, Axios y Cliente -->
+  <script src="/bsjs"></script>
+  <script src="/jq"></script>
+  <script src="/axios"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
