--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -12,7 +12,7 @@
 
 <body>
   {{> header title = "Datos del perfil"}}
-  {{> form }}
+  {{> form edit = true }}
 
   <!-- Scripts de Bootstrap, JQuery, Axios y Cliente -->
   <script src="/bsjs"></script>
