--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,14 +18,14 @@
       <div class="form-group">
         <div class="form-group">
           <label>Email</label>
-          <input class="form-control w-50 m-auto mb-3" />
+          <input id="login-email" type="email" class="form-control w-50 m-auto mb-3" />
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input class="form-control w-50 m-auto mb-3" />
+          <input id="login-password" type="password" class="form-control w-50 m-auto mb-3" />
         </div>
       </div>
-      <button class="btn btn-success mb-3">Ingresar</button>
+      <button id="login-button" class="btn btn-success mb-3">Ingresar</button>
     </form>
   </div>
   <p>¿Aún no tienes cuenta? <a href="/register">Regístrate</a></p>
