edit skater part1

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -15,6 +15,7 @@
   {{> form edit = true }}
 
   <!-- Scripts de Bootstrap, JQuery, Axios y Cliente -->
+  <script> const skaterEmail = '{{email}}' </script>
   <script src="/bsjs"></script>
   <script src="/jq"></script>
   <script src="/axios"></script>
